# sutegi

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose.yml  ontzi  sail
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml
benches/: Cargo.toml  perf-accepted.txt
benches/baselines/: local.json
benches/src/: main.rs
crates/sutegi/: Cargo.toml  README.md
crates/sutegi-actors/: Cargo.toml
crates/sutegi-actors/src/: lib.rs  supervisor.rs
crates/sutegi-ai/: Cargo.toml
crates/sutegi-ai/src/: lib.rs
crates/sutegi-auth/: Cargo.toml
crates/sutegi-auth/src/: flows.rs  lib.rs  links.rs  password.rs  tokens.rs  users.rs
crates/sutegi-auth/tests/: pg_auth.rs
crates/sutegi-channels/: Cargo.toml
crates/sutegi-channels/client/: sutegi-channels.js
crates/sutegi-channels/src/: channel.rs  hub.rs  lib.rs  presence.rs  protocol.rs
crates/sutegi-cli/: Cargo.toml
crates/sutegi-cli/src/: main.rs
crates/sutegi-crypto/: Cargo.toml
crates/sutegi-crypto/src/: lib.rs
crates/sutegi-crypto/tests/: fuzz.rs
crates/sutegi-events/: Cargo.toml
crates/sutegi-events/src/: lib.rs  projection.rs  store.rs
crates/sutegi-events/tests/: pg.rs
crates/sutegi-hex/: Cargo.toml
crates/sutegi-hex/src/: lib.rs
crates/sutegi-hexagon/: Cargo.toml
crates/sutegi-hexagon/src/: lib.rs
crates/sutegi-http/: Cargo.toml
crates/sutegi-http/src/: lib.rs
crates/sutegi-http/tests/: fuzz.rs
crates/sutegi-json/: Cargo.toml
crates/sutegi-json/src/: lib.rs
crates/sutegi-json/tests/: fuzz.rs
crates/sutegi-macros/: Cargo.toml
crates/sutegi-macros/src/: lib.rs
crates/sutegi-mail/: Cargo.toml
crates/sutegi-mail/src/: lib.rs  message.rs  smtp.rs  theme.rs  transports.rs
crates/sutegi-mail/tests/: fuzz.rs
crates/sutegi-orm/: Cargo.toml
crates/sutegi-orm/src/: backend.rs  builder.rs  db.rs  embedding.rs  kv.rs  lib.rs  migrate.rs  pg.rs  schema_diff.rs  value.rs
crates/sutegi-orm/tests/: pg_backend.rs
crates/sutegi-pg/: Cargo.toml
crates/sutegi-pg/src/: crypto.rs  lib.rs  listen.rs  pool.rs  protocol.rs
crates/sutegi-pg/tests/: integration.rs
crates/sutegi-pubsub/: Cargo.toml
crates/sutegi-pubsub/src/: lib.rs  pg.rs
crates/sutegi-pubsub/tests/: pg_live.rs
crates/sutegi-queue/: Cargo.toml
crates/sutegi-queue/src/: lib.rs
crates/sutegi-queue/tests/: durable.rs
crates/sutegi-repl/: Cargo.toml
crates/sutegi-repl/src/: lib.rs
crates/sutegi-repl/tests/: repl.rs
crates/sutegi-session/: Cargo.toml
crates/sutegi-session/src/: lib.rs
crates/sutegi-session/tests/: fuzz.rs
crates/sutegi-storage/: Cargo.toml
crates/sutegi-storage/src/: db.rs  fs.rs  lib.rs  s3.rs
crates/sutegi-storage/tests/: fuzz.rs  pg_storage.rs
crates/sutegi-template/: Cargo.toml
crates/sutegi-template/src/: lib.rs
crates/sutegi-template/tests/: fuzz.rs
crates/sutegi-validate/: Cargo.toml
crates/sutegi-validate/src/: lib.rs
crates/sutegi-web/: Cargo.toml
crates/sutegi-web/src/: files.rs  lib.rs  respond.rs  schema.rs  ws.rs
crates/sutegi-ws/: Cargo.toml
crates/sutegi-ws/src/: lib.rs  poller.rs  protocol.rs  reactor.rs
crates/sutegi-ws/tests/: fuzz.rs  ws.rs
crates/sutegi-zumar/: Cargo.toml  auth-check.mjs  auth-demo.sh  browser-test.mjs  chat-check.mjs  chat-demo.sh  demo-zu-live.sh  e2e.mjs  zu-live-check.mjs
crates/sutegi-zumar/examples/: counter_live.rs
crates/sutegi-zumar/examples-zu/: account.zu  chat.zu  counter.zu
crates/sutegi-zumar/src/: frames.rs  http.rs  journal.rs  lib.rs  scheduler.rs  tests.rs
crates/sutegi/src/: collection.rs  config.rs  lib.rs
crates/sutegi/tests/: channels.rs  columns.rs  derive.rs  presence.rs  relations.rs  server.rs  ws.rs
deploy/: Dockerfile  nginx.conf
deploy/k8s/: deployment.yaml
deploy/vps/: README.md  provision.sh
differential/: Cargo.toml
differential/tests/: json_oracle.rs
docs/: ACTORS.md  HEXAGONAL.md  MIGRATIONS.md  REALTIME.md
examples/auth/: Cargo.toml
examples/auth/src/: main.rs
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
examples/events/: Cargo.toml
examples/events/src/: main.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/hexagonal/: Cargo.toml
examples/hexagonal/src/: application.rs  domain.rs  main.rs  ports.rs
examples/hexagonal/src/adapters/: inbound_ai.rs  inbound_http.rs  mod.rs  outbound_memory.rs  outbound_sqlite.rs
examples/http-load/: Cargo.toml
examples/http-load/src/: main.rs
examples/kv/: Cargo.toml
examples/kv/src/: main.rs
examples/redactor/: Cargo.toml
examples/redactor/src/: main.rs
examples/storage/: Cargo.toml
examples/storage/src/: main.rs
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
examples/ws-chat/: Cargo.toml
examples/ws-chat/src/: main.rs
examples/ws-load/: Cargo.toml
examples/ws-load/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crypto_decode.rs  http_parse.rs  json_parse.rs  template_compile.rs
landing/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
landing/src/: App.svelte  Docs.svelte  Landing.svelte  app.css
