[workspace]
resolver = "2"
members = [
    "crates/sutegi-json",
    "crates/sutegi-http",
    "crates/sutegi-web",
    "crates/sutegi-orm",
    "crates/sutegi-pg",
    "crates/sutegi-validate",
    "crates/sutegi-queue",
    "crates/sutegi-macros",
    "crates/sutegi-hex",
    "crates/sutegi-session",
    "crates/sutegi-ai",
    "crates/sutegi",
    "crates/sutegi-cli",
    "examples/todo",
    "examples/hello",
    "examples/hexagonal",
    "examples/kv",
]
# The bench runner is its own workspace (depends on the external aatxe SDK by
# path); excluded so normal builds / tests / publish never touch it.
exclude = ["benches"]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/enekos/sutegi"
authors = ["Eneko Sarasola"]

# sutegi has ZERO third-party dependencies by design.
# Everything (HTTP/1.1, JSON, routing, ORM query builder, CLI) is built on std only.
# This keeps the release binary tiny and the surface fully auditable by humans and agents.

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
codegen-units = 1   # better cross-module size optimization
panic = "abort"     # drop the unwind tables
strip = true        # strip symbols
