[workspace]
resolver = "2"
members = [
    "crates/sutegi-json",
    "crates/sutegi-http",
    "crates/sutegi-web",
    "crates/sutegi-orm",
    "crates/sutegi-crypto",
    "crates/sutegi-pg",
    "crates/sutegi-ws",
    "crates/sutegi-storage",
    "crates/sutegi-validate",
    "crates/sutegi-queue",
    "crates/sutegi-events",
    "crates/sutegi-macros",
    "crates/sutegi-hex",
    "crates/sutegi-session",
    "crates/sutegi-auth",
    "crates/sutegi-mail",
    "crates/sutegi-template",
    "crates/sutegi-ai",
    "crates/sutegi-repl",
    "crates/sutegi",
    "crates/sutegi-cli",
    "examples/todo",
    "examples/hello",
    "examples/hexagonal",
    "examples/kv",
    "examples/auth",
    "examples/storage",
    "examples/events",
    "examples/redactor",
    "examples/ws-chat",
    "examples/ws-load",
]
# Standalone tooling workspaces, each excluded so normal builds / tests /
# publish never touch them and no third-party dep enters the shipped tree:
#   benches      — aatxe statistical microbench runner (path dep on ../aatxe)
#   fuzz         — coverage-guided libFuzzer targets (nightly, cargo-fuzz)
#   differential — sutegi-vs-serde_json JSON oracle (stable, `cargo test`)
exclude = ["benches", "fuzz", "differential", "crates/sutegi-zumar"]

[workspace.package]
version = "0.5.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/enekos/sutegi"
authors = ["Eneko Sarasola"]

# sutegi has ZERO third-party dependencies by design.
# Everything (HTTP/1.1, JSON, routing, ORM query builder, CLI) is built on std only.
# This keeps the release binary tiny and the surface fully auditable by humans and agents.

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
codegen-units = 1   # better cross-module size optimization
panic = "abort"     # drop the unwind tables
strip = true        # strip symbols
