# Standalone bench runner — its own workspace so it doesn't perturb sutegi's
# build/test/publish. Uses Eneko's aatxe statistical-microbenchmark SDK
# (path dependency on the sibling repo). Run with: `make bench` (see below) or
#   cargo run --release --bin sutegi-bench
[workspace]

[package]
name = "sutegi-benches"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "sutegi-bench"
path = "src/main.rs"

[dependencies]
# The framework under test, with the runnable SQLite layer for DB benches and
# the pure-std Postgres driver for the (env-gated) pg_* benches.
sutegi = { path = "../crates/sutegi", features = ["sqlite", "postgres", "ws"] }
# aatxe statistical microbench SDK (adaptive sampling, CV-gated, JSON RunReport).
aatxe-bench = { path = "../../aatxe/sdk/rust" }

[features]
# Mirrors the facade feature so `#[cfg(feature = "postgres")]` gates the pg_*
# benches in src/main.rs. On by default; the benches themselves still no-op
# unless SUTEGI_PG_TEST_URL is set.
default = ["postgres"]
postgres = []
