[package]
name = "sutegi-actors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Actor processes and supervision trees for sutegi: typed mailboxes over std mpsc, crash capture, OTP-style restart strategies, zero third-party dependencies."
keywords = ["actors", "supervision", "fault-tolerance", "zero-dependency"]
categories = ["concurrency"]

[dependencies]
sutegi-json = { path = "../sutegi-json", version = "0.6.0" }
