[package]
name = "sutegi-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "First-class LLM primitives for sutegi: tool-calling, structured output, and agent-facing endpoints."

[dependencies]
sutegi-web = { path = "../sutegi-web", version = "0.3.0" }
sutegi-json = { path = "../sutegi-json", version = "0.3.0" }
sutegi-validate = { path = "../sutegi-validate", version = "0.3.0" }
