[package]
name = "sutegi-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "First-class LLM primitives for sutegi: tool-calling, structured output, and agent-facing endpoints."

[dependencies]
# Tools + the schema helpers now live in web core; this crate re-exports them.
sutegi-web = { path = "../sutegi-web", version = "0.5.0" }
