[package]
name = "sutegi-hex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Opinionated hexagonal / clean-architecture primitives for sutegi: AppError, UseCase ports, and adapter glue."

[dependencies]
sutegi-json = { path = "../sutegi-json", version = "0.3.0" }
sutegi-web = { path = "../sutegi-web", version = "0.3.0" }
