[package]
name = "sutegi-orm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Zero-dependency SQL query builder, model/schema layer, and migration emitter for sutegi."

[dependencies]
sutegi-json = { path = "../sutegi-json" }
