[package]
name = "sutegi-orm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Zero-dependency SQL query builder, model/schema layer, and migration emitter for sutegi."

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"], optional = true }
sutegi-json = { path = "../sutegi-json" }

# `sqlite` is OFF by default: the zero-dependency core stays tiny. Enable it
# (`--features sqlite`) to get a runnable, bundled SQLite execution layer.
[features]
sqlite = ["dep:rusqlite"]
