[package]
name = "sutegi-orm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Zero-dependency SQL query builder, model/schema layer, and migration emitter for sutegi."

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"], optional = true }
sutegi-pg = { path = "../sutegi-pg", version = "0.2.0", optional = true }
sutegi-json = { path = "../sutegi-json", version = "0.2.0" }

# Both execution backends are OFF by default so the zero-dependency core stays
# tiny. Enable one to get a runnable layer over the same query builder:
#   --features sqlite     bundled SQLite (one C library, single-process)
#   --features postgres   pure-std Postgres driver (no deps, cross-pod)
[features]
sqlite = ["dep:rusqlite"]
postgres = ["dep:sutegi-pg"]
