[package]
name = "sutegi-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Durable, cross-pod job queue for sutegi, backed by PostgreSQL (via the pure-std sutegi-pg driver): atomic FOR UPDATE SKIP LOCKED claim, visibility-timeout crash recovery, retries, delayed dispatch, dead-letter, introspectable stats."

[dependencies]
sutegi-pg = { path = "../sutegi-pg", version = "0.6.0" }
sutegi-json = { path = "../sutegi-json", version = "0.6.0" }
