[package]
name = "sutegi-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Signed-cookie sessions for sutegi (HMAC-SHA256). Opt-in via the `session`/`auth` features."

[dependencies]
sutegi-json = { path = "../sutegi-json", version = "0.5.0" }
sutegi-web = { path = "../sutegi-web", version = "0.5.0" }
# The shared hand-rolled, known-answer-tested primitives (same HMAC-SHA256 the
# Postgres driver's SCRAM uses) — this crate is now zero-third-party-dep.
sutegi-crypto = { path = "../sutegi-crypto", version = "0.5.0" }
