[package]
name = "sutegi-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "File/object storage for sutegi: one Storage trait, local-fs and database-blob backends, plus a pure-std S3 SigV4 presigner. Zero third-party dependencies."
keywords = ["storage", "s3", "presign", "zero-dependency"]
categories = ["web-programming", "filesystem"]

[dependencies]
sutegi-json = { path = "../sutegi-json", version = "0.5.0" }
sutegi-crypto = { path = "../sutegi-crypto", version = "0.5.0" }
sutegi-orm = { path = "../sutegi-orm", version = "0.5.0", optional = true }

[features]
# `DbStorage<B: Backend>`: blobs in a database table over the ORM's Backend
# seam (SQLite or Postgres). Off by default so fs/S3-only users skip the ORM.
db = ["dep:sutegi-orm"]

[dev-dependencies]
sutegi-orm = { path = "../sutegi-orm", version = "0.5.0", features = ["sqlite", "postgres"] }

[package.metadata.docs.rs]
all-features = true
