[package]
name = "sutegi-validate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Zero-dependency validation for sutegi: Laravel-style rule sets and a JSON Schema subset validator with structured errors."

[dependencies]
sutegi-json = { path = "../sutegi-json" }
