[package]
name = "sutegi-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Router, App builder, middleware, extractors, and runtime introspection for sutegi."

[dependencies]
sutegi-http = { path = "../sutegi-http", version = "0.4.0" }
sutegi-json = { path = "../sutegi-json", version = "0.4.0" }
# Optional pillars — pulled in only by their feature, so the zero-dep core
# (json + http + web, no features) is unaffected. They power the ergonomic
# `Ctx` helpers (`db`/`model`/`validate`/`validated`) and tool-arg validation.
sutegi-orm = { path = "../sutegi-orm", version = "0.4.0", optional = true }
sutegi-validate = { path = "../sutegi-validate", version = "0.4.0", optional = true }
# Only pulled in by the `graceful` feature, for SIGTERM/SIGINT handling.
libc = { version = "0.2", optional = true }

[features]
# Install OS signal handlers (SIGTERM/SIGINT) for graceful shutdown in pods.
graceful = ["dep:libc"]
# `Ctx::db`/`Ctx::model` — typed database state + route-model binding.
orm = ["dep:sutegi-orm"]
# `Ctx::validate`/`Ctx::validated` + tool-argument validation.
validate = ["dep:sutegi-validate"]
