[package]
name = "sutegi-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Router, App builder, middleware, extractors, and runtime introspection for sutegi."

[dependencies]
sutegi-crypto = { path = "../sutegi-crypto", version = "0.6.0" }
sutegi-http = { path = "../sutegi-http", version = "0.6.0" }
sutegi-json = { path = "../sutegi-json", version = "0.6.0" }
# Optional pillars — pulled in only by their feature, so the zero-dep core
# (crypto + json + http + web, no features) is unaffected. They power the ergonomic
# `Ctx` helpers (`db`/`model`/`validate`/`validated`) and tool-arg validation.
sutegi-orm = { path = "../sutegi-orm", version = "0.6.0", optional = true }
sutegi-validate = { path = "../sutegi-validate", version = "0.6.0", optional = true }
# Only pulled in by the `graceful` feature, for SIGTERM/SIGINT handling.
libc = { version = "0.2", optional = true }
# Only pulled in by the `ws` feature: RFC 6455 codec + the connection reactor.
sutegi-ws = { path = "../sutegi-ws", version = "0.6.0", optional = true }
# Only pulled in by the `channels` feature: the channel protocol + hub.
sutegi-channels = { path = "../sutegi-channels", version = "0.6.0", optional = true }
# Only pulled in by the `actors` feature: actor processes + supervisors.
sutegi-actors = { path = "../sutegi-actors", version = "0.6.0", optional = true }

[features]
# Install OS signal handlers (SIGTERM/SIGINT) for graceful shutdown in pods.
graceful = ["dep:libc"]
# `Ctx::db`/`Ctx::model` — typed database state + route-model binding.
orm = ["dep:sutegi-orm"]
# `Ctx::validate`/`Ctx::validated` + tool-argument validation.
validate = ["dep:sutegi-validate"]
# `App::ws` — WebSocket endpoints on the sharded kqueue/epoll reactor.
ws = ["dep:sutegi-ws"]
# `App::channels` — Phoenix-style channels mounted on a ws endpoint + /__channels.
channels = ["ws", "dep:sutegi-channels"]
# `App::actors` — mount an actor Registry at /__actors.
actors = ["dep:sutegi-actors"]
