[package]
name = "sutegi-ws"
description = "WebSockets for sutegi: RFC 6455 codec + a sharded kqueue/epoll reactor that holds each idle connection in a few hundred bytes instead of a thread"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sutegi-crypto = { version = "0.5.1", path = "../sutegi-crypto" }
sutegi-http = { version = "0.5.1", path = "../sutegi-http" }
# The one non-Rust-std ingredient: raw kqueue/epoll/pipe syscalls. Same
# posture as sutegi-web's `graceful` feature — libc is a binding, not a
# framework, and there is no std API for readiness-based I/O.
libc = "0.2"
