# sutegi-zumar — the live-mode bridge (LiveView analog): one zumar Program
# per WebSocket connection, server-side effects, and reconnect-by-replay
# journaled through sutegi-events.
#
# Excluded from the sutegi workspace: it needs a sibling zumar checkout
# (like benches/ need aatxe). Build from this directory. The sutegi core
# stays zero-dep; zumar's crates are themselves dependency-light (serde is
# feature-gated OFF here — the wire format never needed it).
[package]
name = "sutegi-zumar"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sutegi-web = { path = "../sutegi-web", features = ["ws"] }
sutegi-json = { path = "../sutegi-json" }
sutegi-crypto = { path = "../sutegi-crypto" }
sutegi-events = { path = "../sutegi-events" }
sutegi-orm = { path = "../sutegi-orm" }
sutegi-pubsub = { path = "../sutegi-pubsub" }
zumar-core = { path = "../../../zumar/crates/zumar-core" }
zumar-runtime = { path = "../../../zumar/crates/zumar-runtime" }

[dev-dependencies]
sutegi-orm = { path = "../sutegi-orm", features = ["sqlite"] }

[workspace]
