[package]
name = "sutegi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sutegi — a zero-dependency, agent-native web framework for Rust. The forge."
readme = "README.md"
keywords = ["web", "framework", "agent", "llm", "zero-dependency"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
# --- core (always compiled): HTTP server, routing, JSON ---
sutegi-json = { path = "../sutegi-json", version = "0.1.0" }
sutegi-http = { path = "../sutegi-http", version = "0.1.0" }
sutegi-web = { path = "../sutegi-web", version = "0.1.0" }
# --- optional pillars: pulled in only by their feature ---
sutegi-orm = { path = "../sutegi-orm", version = "0.1.0", optional = true }
sutegi-validate = { path = "../sutegi-validate", version = "0.1.0", optional = true }
sutegi-queue = { path = "../sutegi-queue", version = "0.1.0", optional = true }
sutegi-ai = { path = "../sutegi-ai", version = "0.1.0", optional = true }
sutegi-hex = { path = "../sutegi-hex", version = "0.1.0", optional = true }
sutegi-macros = { path = "../sutegi-macros", version = "0.1.0", optional = true }

[features]
# Batteries-included by default; opt out with `default-features = false` and
# add back only what you need to shrink the binary.
default = ["derive", "orm", "validate", "ai", "queue"]

# Each pillar is an independent compile-time feature.
orm = ["dep:sutegi-orm"]                                  # schema + query builder
validate = ["dep:sutegi-validate"]                        # request / tool validation
queue = ["dep:sutegi-queue"]                              # background jobs
ai = ["dep:sutegi-ai", "validate"]                        # Tool/StreamTool + /__tools
derive = ["dep:sutegi-macros", "orm"]                     # #[derive(Model)]
sqlite = ["orm", "sutegi-orm/sqlite"]                     # runnable bundled SQLite
graceful = ["sutegi-web/graceful"]                        # SIGTERM/SIGINT draining
hex = ["dep:sutegi-hex"]                                  # hexagonal-architecture primitives

[package.metadata.docs.rs]
all-features = true
