[package]
name = "sutegi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sutegi — a zero-dependency, agent-native web framework for Rust. The forge."
readme = "README.md"
keywords = ["web", "framework", "agent", "llm", "zero-dependency"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
# --- core (always compiled): HTTP server, routing, JSON ---
sutegi-json = { path = "../sutegi-json", version = "0.5.0" }
sutegi-http = { path = "../sutegi-http", version = "0.5.0" }
sutegi-web = { path = "../sutegi-web", version = "0.5.0" }
# --- optional pillars: pulled in only by their feature ---
sutegi-orm = { path = "../sutegi-orm", version = "0.5.0", optional = true }
sutegi-validate = { path = "../sutegi-validate", version = "0.5.0", optional = true }
sutegi-queue = { path = "../sutegi-queue", version = "0.5.0", optional = true }
sutegi-ai = { path = "../sutegi-ai", version = "0.5.0", optional = true }
sutegi-hex = { path = "../sutegi-hex", version = "0.5.0", optional = true }
sutegi-session = { path = "../sutegi-session", version = "0.5.0", optional = true }
sutegi-auth = { path = "../sutegi-auth", version = "0.5.0", optional = true }
sutegi-macros = { path = "../sutegi-macros", version = "0.5.0", optional = true }
sutegi-storage = { path = "../sutegi-storage", version = "0.5.0", optional = true }
sutegi-mail = { path = "../sutegi-mail", version = "0.5.0", optional = true }

[features]
# Batteries-included by default; opt out with `default-features = false` and
# add back only what you need to shrink the binary.
# `queue` is NOT default: the durable queue needs a PostgreSQL database, so it
# is opt-in rather than force-compiled into every minimal build.
default = ["derive", "orm", "validate", "ai"]

# Each pillar is an independent compile-time feature.
orm = ["dep:sutegi-orm", "sutegi-web/orm"]               # schema + query builder + Ctx::db/model
validate = ["dep:sutegi-validate", "sutegi-web/validate"] # request / tool validation + Ctx::validate(d)
queue = ["dep:sutegi-queue"]                              # durable, cross-pod job queue (Postgres-backed)
ai = ["dep:sutegi-ai"]                                    # agent surface (schema helpers, ToolCtx)
derive = ["dep:sutegi-macros", "orm"]                     # #[derive(Model)] / #[derive(Validate)]
sqlite = ["orm", "sutegi-orm/sqlite"]                     # runnable bundled SQLite (per-pod)
postgres = ["orm", "sutegi-orm/postgres"]                 # pure-std Postgres driver (cross-pod)
graceful = ["sutegi-web/graceful"]                        # SIGTERM/SIGINT draining
hex = ["dep:sutegi-hex"]                                  # hexagonal-architecture primitives
session = ["dep:sutegi-session"]                          # signed-cookie sessions (HMAC-SHA256)
auth = ["session", "orm", "dep:sutegi-auth"]              # the user system: passwords, Users, guards, API tokens
mail = ["dep:sutegi-mail"]                                # Email builder + Transport seam + smtp/sendmail/log drivers
auth-mail = ["auth", "mail", "sutegi-auth/mail"]          # verification-link + password-reset flows
storage = ["dep:sutegi-storage"]                          # file storage: local fs + S3 presigned URLs
storage-db = ["storage", "orm", "sutegi-storage/db"]      # blobs in SQLite/Postgres over the Backend seam

[package.metadata.docs.rs]
all-features = true
